--- a/package.json
+++ b/package.json
@@ -43,8 +43,10 @@
     "typescript-eslint": "^8.29.1"
   },
   "dependencies": {
+    "dotenv": "^16.5.0",
     "module-alias": "^2.2.3",
-    "winston": "^3.17.0"
+    "winston": "^3.17.0",
+    "zod": "^3.24.3"
   },
   "_moduleAliases": {
     "@": "./build"
